<resources>
    <string name="app_name">SkinCer-in!</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title">title</string>
    <string name="slider_title_1">Scan &amp; Analyze</string>
    <string name="slider_description_1">SkinCer-in is a medium to help citizens discover tumor  in their skin</string>
    <string name="slider_title_2">Education</string>
    <string name="slider_description_2">To educate Indonesian citizens about the dangers of UV radiation</string>
    <string name="slider_title_3">Are You Ready?</string>
    <string name="slider_description_3">Let\'s Begin Our Journey</string>
    <string name="title_login_page">Sign in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signin">Sign In</string>
    <string name="or">or</string>
    <string name="loginGoogle">Login via Google</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="have_account">Don\'t have account yet?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="enter_username">Enter your username</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="sign_up_text">Create Your Account Now!</string>
    <string name="error_enter_email">Enter your Email first!</string>
    <string name="error_passrword">Enter your password first</string>
    <string name="invalid_email">Check email format</string>
    <string name="error_confirm_password">Password do not Match!</string>
    <string name="create_succes">Account created Successfully</string>
    <string name="try_again">Try Again</string>
    <string name="password_leght">Password should at least 8 character long</string>
    <string name="welcome">Welcome to Skincer-in!</string>
    <string name="wrong_login">Incorrect email or password!</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_photo">Enter your photo</string>
    <string name="enter_photo_desc">Enter your photo to determine if this is a cancer or not</string>
    <string name="ADD_PHOTO">ADD PHOTO</string>
    <string name="gallery">gallery</string>
    <string name="Check">check</string>
    <string name="wait">wait</string>
    <string name="please_wait">Please Wait</string>
    <string name="photo_analyze">Your photos are being analyzed!</string>
    <string name="healthy">healthy</string>
    <string name="healthy_skin">Your skin is healthy!</string>
    <string name="discover">Recognize the types of skin cancer by clicking \nthe button below!</string>
    <string name="see">Check this</string>
    <string name="scan_again">scan again</string>
    <string name="result_text">This is the result of our analysis!</string>
    <string name="result_scan">Your skin is indicated \nto have: %s</string>
    <string name="acuration">Confidence : %s</string>
    <string name="patient">patient</string>
    <string name="total_patient">3000+ \nPatients</string>
    <string name="line">line</string>
    <string name="danger">Danger!!!</string>
    <string name="description">Description</string>
    <string name="melanoma_desc">"Melanoma, the most serious type of skin cancer, develops in the cells (melanocytes) that produce melanin — the pigment that gives your skin its color. Melanoma can also form in your eyes and, rarely, inside your body, such as in your nose or throat.\n\nThe exact cause of all melanomas isn't clear, but exposure to ultraviolet (UV) radiation from sunlight or tanning lamps and beds increases your risk of developing melanoma. Limiting your exposure to UV radiation can help reduce your risk of melanoma. "</string>
    <string name="causes">Causes</string>
    <string name="symptoms">Symptoms</string>
    <string name="treatment">Treatment</string>
    <string name="prevention">Prevention</string>
    <string name="source">Source : skincer.com</string>
    <string name="melanoma">melanoma</string>
    <string name="detail_image">detail image</string>
    <string name="back">back</string>
    <string name="scan"><![CDATA[Scan & Analyze]]></string>
    <string name="List">list</string>
    <string name="scan_result">Scan Result</string>
    <string name="email_already_registered">Email already registered!</string>
    <string name="about">About</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="powered_by">Powered by</string>
    <string name="print">Print to pdf</string>

</resources>