<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".response.HealtySkinResult">

    <ImageView
        android:id="@+id/healthy"
        android:layout_width="244dp"
        android:layout_height="244dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/healthy"
        android:src="@drawable/aman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/healthy_skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/healthy_skin"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthy" />

    <TextView
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text="@string/discover"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthy_skin" />

    <Button
        android:id="@+id/scan_again"
        style="@style/CustomButtonStyle"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/scan_again"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discover"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/discover_button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/stroke_button"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/see"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scan_again"
        app:layout_constraintStart_toEndOf="@+id/scan_again"
        app:layout_constraintTop_toTopOf="@+id/scan_again"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>